fix: posts title on mobile

--- a/app/posts/components/posts/posts.module.scss
+++ b/app/posts/components/posts/posts.module.scss
@@ -44,7 +44,7 @@
                 }
 
                 .post-link {
-                    display: flex;
+                    display: inline-flex;
                     align-items: center;
                     padding: 0px 0.5ch;
 
@@ -59,6 +59,10 @@
                         &:hover {
                             @include utilities.shadow-hover;
                         }
+                    }
+
+                    @media (max-width: utilities.$small-width) {
+                        margin-left: 2ch;
                     }
                 }
             }
